[gd_scene load_steps=8 format=2]

[ext_resource path="res://GrobakerAssets/Stargate/Stargate-web.obj" type="ArrayMesh" id=1]
[ext_resource path="res://GrobakerAssets/Stargate/Untitled.png" type="Texture" id=2]
[ext_resource path="res://GrobakerAssets/Scripts/Stargate.gd" type="Script" id=3]

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -0.5, 1.5, -0.16, -0.5, 1.5, 0.16, -0.45, 1.2, -0.05, -0.45, 1.2, -0.05, -0.5, 1.5, 0.16, -0.45, 1.2, 0.05, 0.45, 1.2, 0.05, 0.5, 1.5, 0.16, 0.45, 1.2, -0.05, 0.45, 1.2, -0.05, 0.5, 1.5, 0.16, 0.5, 1.5, -0.16, -0.45, 1.2, -0.05, -0.45, 1.2, 0.05, 0.45, 1.2, -0.05, 0.45, 1.2, -0.05, -0.45, 1.2, 0.05, 0.45, 1.2, 0.05, -0.5, 1.5, 0.16, -0.5, 1.5, -0.16, 0.5, 1.5, 0.16, 0.5, 1.5, 0.16, -0.5, 1.5, -0.16, 0.5, 1.5, -0.16, -0.5, 1.5, -0.16, -0.45, 1.2, -0.05, 0.5, 1.5, -0.16, 0.5, 1.5, -0.16, -0.45, 1.2, -0.05, 0.45, 1.2, -0.05, -0.45, 1.2, 0.05, -0.5, 1.5, 0.16, 0.45, 1.2, 0.05, 0.45, 1.2, 0.05, -0.5, 1.5, 0.16, 0.5, 1.5, 0.16, -0.5, 1.0462, -1.0867, -0.5, 1.2519, -0.8416, -0.45, 0.8871, -0.8096, -0.45, 0.8871, -0.8096, -0.5, 1.2519, -0.8416, -0.45, 0.9514, -0.733, 0.45, 0.9514, -0.733, 0.5, 1.2519, -0.8416, 0.45, 0.8871, -0.8096, 0.45, 0.8871, -0.8096, 0.5, 1.2519, -0.8416, 0.5, 1.0462, -1.0867, -0.45, 0.8871, -0.8096, -0.45, 0.9514, -0.733, 0.45, 0.8871, -0.8096, 0.45, 0.8871, -0.8096, -0.45, 0.9514, -0.733, 0.45, 0.9514, -0.733, -0.5, 1.2519, -0.8416, -0.5, 1.0462, -1.0867, 0.5, 1.2519, -0.8416, 0.5, 1.2519, -0.8416, -0.5, 1.0462, -1.0867, 0.5, 1.0462, -1.0867, -0.5, 1.0462, -1.0867, -0.45, 0.8871, -0.8096, 0.5, 1.0462, -1.0867, 0.5, 1.0462, -1.0867, -0.45, 0.8871, -0.8096, 0.45, 0.8871, -0.8096, -0.45, 0.9514, -0.733, -0.5, 1.2519, -0.8416, 0.45, 0.9514, -0.733, 0.45, 0.9514, -0.733, -0.5, 1.2519, -0.8416, 0.5, 1.2519, -0.8416, -0.5, 0.1029, -1.505, -0.5, 0.418, -1.4494, -0.45, 0.1591, -1.1905, -0.45, 0.1591, -1.1905, -0.5, 0.418, -1.4494, -0.45, 0.2576, -1.1731, 0.45, 0.2576, -1.1731, 0.5, 0.418, -1.4494, 0.45, 0.1591, -1.1905, 0.45, 0.1591, -1.1905, 0.5, 0.418, -1.4494, 0.5, 0.1029, -1.505, -0.45, 0.1591, -1.1905, -0.45, 0.2576, -1.1731, 0.45, 0.1591, -1.1905, 0.45, 0.1591, -1.1905, -0.45, 0.2576, -1.1731, 0.45, 0.2576, -1.1731, -0.5, 0.418, -1.4494, -0.5, 0.1029, -1.505, 0.5, 0.418, -1.4494, 0.5, 0.418, -1.4494, -0.5, 0.1029, -1.505, 0.5, 0.1029, -1.505, -0.5, 0.1029, -1.505, -0.45, 0.1591, -1.1905, 0.5, 0.1029, -1.505, 0.5, 0.1029, -1.505, -0.45, 0.1591, -1.1905, 0.45, 0.1591, -1.1905, -0.45, 0.2576, -1.1731, -0.5, 0.418, -1.4494, 0.45, 0.2576, -1.1731, 0.45, 0.2576, -1.1731, -0.5, 0.418, -1.4494, 0.5, 0.418, -1.4494, -0.5, -0.8886, -1.219, -0.5, -0.6114, -1.379, -0.45, -0.6433, -1.0142, -0.45, -0.6433, -1.0142, -0.5, -0.6114, -1.379, -0.45, -0.5567, -1.0642, 0.45, -0.5567, -1.0642, 0.5, -0.6114, -1.379, 0.45, -0.6433, -1.0142, 0.45, -0.6433, -1.0142, 0.5, -0.6114, -1.379, 0.5, -0.8886, -1.219, -0.45, -0.6433, -1.0142, -0.45, -0.5567, -1.0642, 0.45, -0.6433, -1.0142, 0.45, -0.6433, -1.0142, -0.45, -0.5567, -1.0642, 0.45, -0.5567, -1.0642, -0.5, -0.6114, -1.379, -0.5, -0.8886, -1.219, 0.5, -0.6114, -1.379, 0.5, -0.6114, -1.379, -0.5, -0.8886, -1.219, 0.5, -0.8886, -1.219, -0.5, -0.8886, -1.219, -0.45, -0.6433, -1.0142, 0.5, -0.8886, -1.219, 0.5, -0.8886, -1.219, -0.45, -0.6433, -1.0142, 0.45, -0.6433, -1.0142, -0.45, -0.5567, -1.0642, -0.5, -0.6114, -1.379, 0.45, -0.5567, -1.0642, 0.45, -0.5567, -1.0642, -0.5, -0.6114, -1.379, 0.5, -0.6114, -1.379, -0.5, -1.4643, -0.3627, -0.5, -1.3548, -0.6634, -0.45, -1.1447, -0.3634, -0.45, -1.1447, -0.3634, -0.5, -1.3548, -0.6634, -0.45, -1.1105, -0.4574, 0.45, -1.1105, -0.4574, 0.5, -1.3548, -0.6634, 0.45, -1.1447, -0.3634, 0.45, -1.1447, -0.3634, 0.5, -1.3548, -0.6634, 0.5, -1.4643, -0.3627, -0.45, -1.1447, -0.3634, -0.45, -1.1105, -0.4574, 0.45, -1.1447, -0.3634, 0.45, -1.1447, -0.3634, -0.45, -1.1105, -0.4574, 0.45, -1.1105, -0.4574, -0.5, -1.3548, -0.6634, -0.5, -1.4643, -0.3627, 0.5, -1.3548, -0.6634, 0.5, -1.3548, -0.6634, -0.5, -1.4643, -0.3627, 0.5, -1.4643, -0.3627, -0.5, -1.4643, -0.3627, -0.45, -1.1447, -0.3634, 0.5, -1.4643, -0.3627, 0.5, -1.4643, -0.3627, -0.45, -1.1447, -0.3634, 0.45, -1.1447, -0.3634, -0.45, -1.1105, -0.4574, -0.5, -1.3548, -0.6634, 0.45, -1.1105, -0.4574, 0.45, -1.1105, -0.4574, -0.5, -1.3548, -0.6634, 0.5, -1.3548, -0.6634, -0.5, -1.3548, 0.6634, -0.5, -1.4643, 0.3627, -0.45, -1.1105, 0.4574, -0.45, -1.1105, 0.4574, -0.5, -1.4643, 0.3627, -0.45, -1.1447, 0.3634, 0.45, -1.1447, 0.3634, 0.5, -1.4643, 0.3627, 0.45, -1.1105, 0.4574, 0.45, -1.1105, 0.4574, 0.5, -1.4643, 0.3627, 0.5, -1.3548, 0.6634, -0.45, -1.1105, 0.4574, -0.45, -1.1447, 0.3634, 0.45, -1.1105, 0.4574, 0.45, -1.1105, 0.4574, -0.45, -1.1447, 0.3634, 0.45, -1.1447, 0.3634, -0.5, -1.4643, 0.3627, -0.5, -1.3548, 0.6634, 0.5, -1.4643, 0.3627, 0.5, -1.4643, 0.3627, -0.5, -1.3548, 0.6634, 0.5, -1.3548, 0.6634, -0.5, -1.3548, 0.6634, -0.45, -1.1105, 0.4574, 0.5, -1.3548, 0.6634, 0.5, -1.3548, 0.6634, -0.45, -1.1105, 0.4574, 0.45, -1.1105, 0.4574, -0.45, -1.1447, 0.3634, -0.5, -1.4643, 0.3627, 0.45, -1.1447, 0.3634, 0.45, -1.1447, 0.3634, -0.5, -1.4643, 0.3627, 0.5, -1.4643, 0.3627, -0.5, -0.6114, 1.379, -0.5, -0.8886, 1.219, -0.45, -0.5567, 1.0642, -0.45, -0.5567, 1.0642, -0.5, -0.8886, 1.219, -0.45, -0.6433, 1.0142, 0.45, -0.6433, 1.0142, 0.5, -0.8886, 1.219, 0.45, -0.5567, 1.0642, 0.45, -0.5567, 1.0642, 0.5, -0.8886, 1.219, 0.5, -0.6114, 1.379, -0.45, -0.5567, 1.0642, -0.45, -0.6433, 1.0142, 0.45, -0.5567, 1.0642, 0.45, -0.5567, 1.0642, -0.45, -0.6433, 1.0142, 0.45, -0.6433, 1.0142, -0.5, -0.8886, 1.219, -0.5, -0.6114, 1.379, 0.5, -0.8886, 1.219, 0.5, -0.8886, 1.219, -0.5, -0.6114, 1.379, 0.5, -0.6114, 1.379, -0.5, -0.6114, 1.379, -0.45, -0.5567, 1.0642, 0.5, -0.6114, 1.379, 0.5, -0.6114, 1.379, -0.45, -0.5567, 1.0642, 0.45, -0.5567, 1.0642, -0.45, -0.6433, 1.0142, -0.5, -0.8886, 1.219, 0.45, -0.6433, 1.0142, 0.45, -0.6433, 1.0142, -0.5, -0.8886, 1.219, 0.5, -0.8886, 1.219, -0.5, 0.418, 1.4494, -0.5, 0.1029, 1.505, -0.45, 0.2576, 1.1731, -0.45, 0.2576, 1.1731, -0.5, 0.1029, 1.505, -0.45, 0.1591, 1.1905, 0.45, 0.1591, 1.1905, 0.5, 0.1029, 1.505, 0.45, 0.2576, 1.1731, 0.45, 0.2576, 1.1731, 0.5, 0.1029, 1.505, 0.5, 0.418, 1.4494, -0.45, 0.2576, 1.1731, -0.45, 0.1591, 1.1905, 0.45, 0.2576, 1.1731, 0.45, 0.2576, 1.1731, -0.45, 0.1591, 1.1905, 0.45, 0.1591, 1.1905, -0.5, 0.1029, 1.505, -0.5, 0.418, 1.4494, 0.5, 0.1029, 1.505, 0.5, 0.1029, 1.505, -0.5, 0.418, 1.4494, 0.5, 0.418, 1.4494, -0.5, 0.418, 1.4494, -0.45, 0.2576, 1.1731, 0.5, 0.418, 1.4494, 0.5, 0.418, 1.4494, -0.45, 0.2576, 1.1731, 0.45, 0.2576, 1.1731, -0.45, 0.1591, 1.1905, -0.5, 0.1029, 1.505, 0.45, 0.1591, 1.1905, 0.45, 0.1591, 1.1905, -0.5, 0.1029, 1.505, 0.5, 0.1029, 1.505, -0.5, 1.2519, 0.8416, -0.5, 1.0462, 1.0867, -0.45, 0.9514, 0.733, -0.45, 0.9514, 0.733, -0.5, 1.0462, 1.0867, -0.45, 0.8871, 0.8096, 0.45, 0.8871, 0.8096, 0.5, 1.0462, 1.0868, 0.45, 0.9514, 0.733, 0.45, 0.9514, 0.733, 0.5, 1.0462, 1.0868, 0.5, 1.2519, 0.8416, -0.45, 0.9514, 0.733, -0.45, 0.8871, 0.8096, 0.45, 0.9514, 0.733, 0.45, 0.9514, 0.733, -0.45, 0.8871, 0.8096, 0.45, 0.8871, 0.8096, -0.5, 1.0462, 1.0867, -0.5, 1.2519, 0.8416, 0.5, 1.0462, 1.0868, 0.5, 1.0462, 1.0868, -0.5, 1.2519, 0.8416, 0.5, 1.2519, 0.8416, -0.5, 1.2519, 0.8416, -0.45, 0.9514, 0.733, 0.5, 1.2519, 0.8416, 0.5, 1.2519, 0.8416, -0.45, 0.9514, 0.733, 0.45, 0.9514, 0.733, -0.45, 0.8871, 0.8096, -0.5, 1.0462, 1.0867, 0.45, 0.8871, 0.8096, 0.45, 0.8871, 0.8096, -0.5, 1.0462, 1.0867, 0.5, 1.0462, 1.0868, -0.36, -0.7006, 0.835, -0.36, -0.9642, 1.1491, -0.36, -0.944, 0.545, -0.36, -0.944, 0.545, -0.36, -0.9642, 1.1491, -0.36, -1.299, 0.75, -0.36, 1.0734, -0.1893, -0.36, 1.4772, -0.2605, -0.36, 1.0734, 0.1893, -0.36, 1.0734, 0.1893, -0.36, 1.4772, -0.2605, -0.36, 1.4772, 0.2605, -0.36, -0.944, 0.545, -0.36, -1.299, 0.75, -0.36, -1.0734, 0.1893, -0.36, -1.0734, 0.1893, -0.36, -1.299, 0.75, -0.36, -1.4772, 0.2605, -0.36, 1.0734, 0.1893, -0.36, 1.4772, 0.2605, -0.36, 0.944, 0.545, -0.36, 0.944, 0.545, -0.36, 1.4772, 0.2605, -0.36, 1.299, 0.75, -0.36, -1.0734, 0.1893, -0.36, -1.4772, 0.2605, -0.36, -1.0734, -0.1893, -0.36, -1.0734, -0.1893, -0.36, -1.4772, 0.2605, -0.36, -1.4772, -0.2605, -0.36, 0.944, 0.545, -0.36, 1.299, 0.75, -0.36, 0.7006, 0.835, -0.36, 0.7006, 0.835, -0.36, 1.299, 0.75, -0.36, 0.9642, 1.1491, -0.36, -1.0734, -0.1893, -0.36, -1.4772, -0.2605, -0.36, -0.944, -0.545, -0.36, -0.944, -0.545, -0.36, -1.4772, -0.2605, -0.36, -1.299, -0.75, -0.36, 0.7006, 0.835, -0.36, 0.9642, 1.1491, -0.36, 0.3728, 1.0243, -0.36, 0.3728, 1.0243, -0.36, 0.9642, 1.1491, -0.36, 0.513, 1.4095, -0.36, 0, -1.09, -0.36, 0, -1.5, -0.36, 0.3728, -1.0243, -0.36, 0.3728, -1.0243, -0.36, 0, -1.5, -0.36, 0.513, -1.4095, -0.36, -0.944, -0.545, -0.36, -1.299, -0.75, -0.36, -0.7006, -0.835, -0.36, -0.7006, -0.835, -0.36, -1.299, -0.75, -0.36, -0.9642, -1.1491, -0.36, 0.3728, 1.0243, -0.36, 0.513, 1.4095, -0.36, 0, 1.09, -0.36, 0, 1.09, -0.36, 0.513, 1.4095, -0.36, 0, 1.5, -0.36, 0.3728, -1.0243, -0.36, 0.513, -1.4095, -0.36, 0.7006, -0.835, -0.36, 0.7006, -0.835, -0.36, 0.513, -1.4095, -0.36, 0.9642, -1.1491, -0.36, -0.7006, -0.835, -0.36, -0.9642, -1.1491, -0.36, -0.3728, -1.0243, -0.36, -0.3728, -1.0243, -0.36, -0.9642, -1.1491, -0.36, -0.513, -1.4095, -0.36, 0, 1.09, -0.36, 0, 1.5, -0.36, -0.3728, 1.0243, -0.36, -0.3728, 1.0243, -0.36, 0, 1.5, -0.36, -0.513, 1.4095, -0.36, 0.7006, -0.835, -0.36, 0.9642, -1.1491, -0.36, 0.944, -0.545, -0.36, 0.944, -0.545, -0.36, 0.9642, -1.1491, -0.36, 1.299, -0.75, -0.36, -0.3728, -1.0243, -0.36, -0.513, -1.4095, -0.36, 0, -1.09, -0.36, 0, -1.09, -0.36, -0.513, -1.4095, -0.36, 0, -1.5, -0.36, -0.3728, 1.0243, -0.36, -0.513, 1.4095, -0.36, -0.7006, 0.835, -0.36, -0.7006, 0.835, -0.36, -0.513, 1.4095, -0.36, -0.9642, 1.1491, -0.36, 0.944, -0.545, -0.36, 1.299, -0.75, -0.36, 1.0734, -0.1893, -0.36, 1.0734, -0.1893, -0.36, 1.299, -0.75, -0.36, 1.4772, -0.2605, 0.36, -1.299, 0.75, 0.36, -0.9642, 1.1491, 0.36, -0.944, 0.545, 0.36, -0.944, 0.545, 0.36, -0.9642, 1.1491, 0.36, -0.7006, 0.835, 0.36, 1.4772, 0.2605, 0.36, 1.4772, -0.2605, 0.36, 1.0734, 0.1893, 0.36, 1.0734, 0.1893, 0.36, 1.4772, -0.2605, 0.36, 1.0734, -0.1893, 0.36, -1.4772, 0.2605, 0.36, -1.299, 0.75, 0.36, -1.0734, 0.1893, 0.36, -1.0734, 0.1893, 0.36, -1.299, 0.75, 0.36, -0.944, 0.545, 0.36, 1.299, 0.75, 0.36, 1.4772, 0.2605, 0.36, 0.944, 0.545, 0.36, 0.944, 0.545, 0.36, 1.4772, 0.2605, 0.36, 1.0734, 0.1893, 0.36, -1.4772, -0.2605, 0.36, -1.4772, 0.2605, 0.36, -1.0734, -0.1893, 0.36, -1.0734, -0.1893, 0.36, -1.4772, 0.2605, 0.36, -1.0734, 0.1893, 0.36, 0.9642, 1.1491, 0.36, 1.299, 0.75, 0.36, 0.7006, 0.835, 0.36, 0.7006, 0.835, 0.36, 1.299, 0.75, 0.36, 0.944, 0.545, 0.36, -1.299, -0.75, 0.36, -1.4772, -0.2605, 0.36, -0.944, -0.545, 0.36, -0.944, -0.545, 0.36, -1.4772, -0.2605, 0.36, -1.0734, -0.1893, 0.36, 0.513, 1.4095, 0.36, 0.9642, 1.1491, 0.36, 0.3728, 1.0243, 0.36, 0.3728, 1.0243, 0.36, 0.9642, 1.1491, 0.36, 0.7006, 0.835, 0.36, 0.513, -1.4095, 0.36, 0, -1.5, 0.36, 0.3728, -1.0243, 0.36, 0.3728, -1.0243, 0.36, 0, -1.5, 0.36, 0, -1.09, 0.36, -0.9642, -1.1491, 0.36, -1.299, -0.75, 0.36, -0.7006, -0.835, 0.36, -0.7006, -0.835, 0.36, -1.299, -0.75, 0.36, -0.944, -0.545, 0.36, 0, 1.5, 0.36, 0.513, 1.4095, 0.36, 0, 1.09, 0.36, 0, 1.09, 0.36, 0.513, 1.4095, 0.36, 0.3728, 1.0243, 0.36, 0.9642, -1.1491, 0.36, 0.513, -1.4095, 0.36, 0.7006, -0.835, 0.36, 0.7006, -0.835, 0.36, 0.513, -1.4095, 0.36, 0.3728, -1.0243, 0.36, -0.513, -1.4095, 0.36, -0.9642, -1.1491, 0.36, -0.3728, -1.0243, 0.36, -0.3728, -1.0243, 0.36, -0.9642, -1.1491, 0.36, -0.7006, -0.835, 0.36, -0.513, 1.4095, 0.36, 0, 1.5, 0.36, -0.3728, 1.0243, 0.36, -0.3728, 1.0243, 0.36, 0, 1.5, 0.36, 0, 1.09, 0.36, 1.299, -0.75, 0.36, 0.9642, -1.1491, 0.36, 0.944, -0.545, 0.36, 0.944, -0.545, 0.36, 0.9642, -1.1491, 0.36, 0.7006, -0.835, 0.36, 0, -1.5, 0.36, -0.513, -1.4095, 0.36, 0, -1.09, 0.36, 0, -1.09, 0.36, -0.513, -1.4095, 0.36, -0.3728, -1.0243, 0.36, -0.9642, 1.1491, 0.36, -0.513, 1.4095, 0.36, -0.7006, 0.835, 0.36, -0.7006, 0.835, 0.36, -0.513, 1.4095, 0.36, -0.3728, 1.0243, 0.36, 1.4772, -0.2605, 0.36, 1.299, -0.75, 0.36, 1.0734, -0.1893, 0.36, 1.0734, -0.1893, 0.36, 1.299, -0.75, 0.36, 0.944, -0.545, -0.36, 0, -1.09, -0.36, 0.3728, -1.0243, 0.36, 0, -1.09, 0.36, 0, -1.09, -0.36, 0.3728, -1.0243, 0.36, 0.3728, -1.0243, -0.36, 1.299, 0.75, -0.36, 1.4772, 0.2605, 0.36, 1.299, 0.75, 0.36, 1.299, 0.75, -0.36, 1.4772, 0.2605, 0.36, 1.4772, 0.2605, -0.36, -1.0734, -0.1893, -0.36, -0.944, -0.545, 0.36, -1.0734, -0.1893, 0.36, -1.0734, -0.1893, -0.36, -0.944, -0.545, 0.36, -0.944, -0.545, -0.36, 0.3728, -1.0243, -0.36, 0.7006, -0.835, 0.36, 0.3728, -1.0243, 0.36, 0.3728, -1.0243, -0.36, 0.7006, -0.835, 0.36, 0.7006, -0.835, -0.36, 0.9642, 1.1491, -0.36, 1.299, 0.75, 0.36, 0.9642, 1.1491, 0.36, 0.9642, 1.1491, -0.36, 1.299, 0.75, 0.36, 1.299, 0.75, -0.36, -0.944, -0.545, -0.36, -0.7006, -0.835, 0.36, -0.944, -0.545, 0.36, -0.944, -0.545, -0.36, -0.7006, -0.835, 0.36, -0.7006, -0.835, -0.36, 0.7006, -0.835, -0.36, 0.944, -0.545, 0.36, 0.7006, -0.835, 0.36, 0.7006, -0.835, -0.36, 0.944, -0.545, 0.36, 0.944, -0.545, -0.36, 0.513, 1.4095, -0.36, 0.9642, 1.1491, 0.36, 0.513, 1.4095, 0.36, 0.513, 1.4095, -0.36, 0.9642, 1.1491, 0.36, 0.9642, 1.1491, -0.36, -0.7006, -0.835, -0.36, -0.3728, -1.0243, 0.36, -0.7006, -0.835, 0.36, -0.7006, -0.835, -0.36, -0.3728, -1.0243, 0.36, -0.3728, -1.0243, -0.36, 0.944, -0.545, -0.36, 1.0734, -0.1893, 0.36, 0.944, -0.545, 0.36, 0.944, -0.545, -0.36, 1.0734, -0.1893, 0.36, 1.0734, -0.1893, -0.36, 0, 1.5, -0.36, 0.513, 1.4095, 0.36, 0, 1.5, 0.36, 0, 1.5, -0.36, 0.513, 1.4095, 0.36, 0.513, 1.4095, -0.36, -0.3728, -1.0243, -0.36, 0, -1.09, 0.36, -0.3728, -1.0243, 0.36, -0.3728, -1.0243, -0.36, 0, -1.09, 0.36, 0, -1.09, -0.36, 1.0734, -0.1893, -0.36, 1.0734, 0.1893, 0.36, 1.0734, -0.1893, 0.36, 1.0734, -0.1893, -0.36, 1.0734, 0.1893, 0.36, 1.0734, 0.1893, -0.36, -0.513, 1.4095, -0.36, 0, 1.5, 0.36, -0.513, 1.4095, 0.36, -0.513, 1.4095, -0.36, 0, 1.5, 0.36, 0, 1.5, -0.36, 1.0734, 0.1893, -0.36, 0.944, 0.545, 0.36, 1.0734, 0.1893, 0.36, 1.0734, 0.1893, -0.36, 0.944, 0.545, 0.36, 0.944, 0.545, -0.36, -0.9642, 1.1491, -0.36, -0.513, 1.4095, 0.36, -0.9642, 1.1491, 0.36, -0.9642, 1.1491, -0.36, -0.513, 1.4095, 0.36, -0.513, 1.4095, -0.36, 0.944, 0.545, -0.36, 0.7006, 0.835, 0.36, 0.944, 0.545, 0.36, 0.944, 0.545, -0.36, 0.7006, 0.835, 0.36, 0.7006, 0.835, -0.36, -1.299, 0.75, -0.36, -0.9642, 1.1491, 0.36, -1.299, 0.75, 0.36, -1.299, 0.75, -0.36, -0.9642, 1.1491, 0.36, -0.9642, 1.1491, -0.36, 0.7006, 0.835, -0.36, 0.3728, 1.0243, 0.36, 0.7006, 0.835, 0.36, 0.7006, 0.835, -0.36, 0.3728, 1.0243, 0.36, 0.3728, 1.0243, -0.36, -1.4772, 0.2605, -0.36, -1.299, 0.75, 0.36, -1.4772, 0.2605, 0.36, -1.4772, 0.2605, -0.36, -1.299, 0.75, 0.36, -1.299, 0.75, -0.36, 0.3728, 1.0243, -0.36, 0, 1.09, 0.36, 0.3728, 1.0243, 0.36, 0.3728, 1.0243, -0.36, 0, 1.09, 0.36, 0, 1.09, -0.36, -1.4772, -0.2605, -0.36, -1.4772, 0.2605, 0.36, -1.4772, -0.2605, 0.36, -1.4772, -0.2605, -0.36, -1.4772, 0.2605, 0.36, -1.4772, 0.2605, -0.36, 0.513, -1.4095, -0.36, 0, -1.5, 0.36, 0.513, -1.4095, 0.36, 0.513, -1.4095, -0.36, 0, -1.5, 0.36, 0, -1.5, -0.36, 0, 1.09, -0.36, -0.3728, 1.0243, 0.36, 0, 1.09, 0.36, 0, 1.09, -0.36, -0.3728, 1.0243, 0.36, -0.3728, 1.0243, -0.36, -1.299, -0.75, -0.36, -1.4772, -0.2605, 0.36, -1.299, -0.75, 0.36, -1.299, -0.75, -0.36, -1.4772, -0.2605, 0.36, -1.4772, -0.2605, -0.36, 0.9642, -1.1491, -0.36, 0.513, -1.4095, 0.36, 0.9642, -1.1491, 0.36, 0.9642, -1.1491, -0.36, 0.513, -1.4095, 0.36, 0.513, -1.4095, -0.36, -0.3728, 1.0243, -0.36, -0.7006, 0.835, 0.36, -0.3728, 1.0243, 0.36, -0.3728, 1.0243, -0.36, -0.7006, 0.835, 0.36, -0.7006, 0.835, -0.36, -0.9642, -1.1491, -0.36, -1.299, -0.75, 0.36, -0.9642, -1.1491, 0.36, -0.9642, -1.1491, -0.36, -1.299, -0.75, 0.36, -1.299, -0.75, -0.36, 1.299, -0.75, -0.36, 0.9642, -1.1491, 0.36, 1.299, -0.75, 0.36, 1.299, -0.75, -0.36, 0.9642, -1.1491, 0.36, 0.9642, -1.1491, -0.36, -0.7006, 0.835, -0.36, -0.944, 0.545, 0.36, -0.7006, 0.835, 0.36, -0.7006, 0.835, -0.36, -0.944, 0.545, 0.36, -0.944, 0.545, -0.36, -0.513, -1.4095, -0.36, -0.9642, -1.1491, 0.36, -0.513, -1.4095, 0.36, -0.513, -1.4095, -0.36, -0.9642, -1.1491, 0.36, -0.9642, -1.1491, -0.36, 1.4772, -0.2605, -0.36, 1.299, -0.75, 0.36, 1.4772, -0.2605, 0.36, 1.4772, -0.2605, -0.36, 1.299, -0.75, 0.36, 1.299, -0.75, -0.36, -0.944, 0.545, -0.36, -1.0734, 0.1893, 0.36, -0.944, 0.545, 0.36, -0.944, 0.545, -0.36, -1.0734, 0.1893, 0.36, -1.0734, 0.1893, -0.36, 0, -1.5, -0.36, -0.513, -1.4095, 0.36, 0, -1.5, 0.36, 0, -1.5, -0.36, -0.513, -1.4095, 0.36, -0.513, -1.4095, -0.36, 1.4772, 0.2605, -0.36, 1.4772, -0.2605, 0.36, 1.4772, 0.2605, 0.36, 1.4772, 0.2605, -0.36, 1.4772, -0.2605, 0.36, 1.4772, -0.2605, -0.36, -1.0734, 0.1893, -0.36, -1.0734, -0.1893, 0.36, -1.0734, 0.1893, 0.36, -1.0734, 0.1893, -0.36, -1.0734, -0.1893, 0.36, -1.0734, -0.1893 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 2 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.153407, 1, 1 )

[sub_resource type="Animation" id=4]
resource_name = "Spin"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 180, 0, 0 ), Vector3( 360, 0, 0 ) ]
}

[node name="Stargate" type="StaticBody"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="StargateMesh" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="Area Detector" type="Area" parent="StargateMesh"]

[node name="CollisionShape" type="CollisionShape" parent="StargateMesh/Area Detector"]
transform = Transform( 1, 0, 0, 0, 1.18857, 0, 0, 0, 1.03299, 0, 0, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="StargateMesh"]
anims/Spin = SubResource( 4 )

[node name="OmniLight" type="SpotLight" parent="."]
transform = Transform( -1.09278e-08, 0, -0.25, 0, 0.25, 0, 0.25, 0, -1.09278e-08, -1.90025, -0.0209446, 0 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.25
spot_range = 8.67107
spot_angle = 44.6274

[node name="Position" type="Position3D" parent="."]

[connection signal="body_entered" from="StargateMesh/Area Detector" to="." method="_on_Area_Detector_body_entered"]
